[gd_scene load_steps=5 format=3 uid="uid://dpe6vigd14fcl"]

[ext_resource type="Script" path="res://scenes/objects/electrical_box_object.gd" id="1_6e18y"]
[ext_resource type="Texture2D" uid="uid://68btsn8i3yyd" path="res://graphics/objects/electrical/electrical_box.png" id="1_85cil"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y3w3y"]
size = Vector2(641, 640)

[sub_resource type="CanvasTexture" id="CanvasTexture_p2dv6"]

[node name="ElectricalBoxObject" type="Area2D"]
script = ExtResource("1_6e18y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_y3w3y")

[node name="ElectricalImage" type="Sprite2D" parent="."]
texture = ExtResource("1_85cil")

[node name="WhiteRectangle" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.196078)
position = Vector2(-1.0252e-05, 9.99999)
scale = Vector2(632, 402)
texture = SubResource("CanvasTexture_p2dv6")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
